--- a/coursera/statistics_with_r/intro_prob_data.Rmd
+++ b/coursera/statistics_with_r/intro_prob_data.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Introduction to Probability and Data"
-Author: "Tamal Mukherjee"
+author: "Tamal Mukherjee"
 output: html_notebook
 ---
 
