--- a/coursera/statistics_with_r/intro_prob_data.Rmd
+++ b/coursera/statistics_with_r/intro_prob_data.Rmd
@@ -3,4 +3,5 @@ title: "Introduction to Probability and Data"
 author: "Tamal Mukherjee"
 output: html_notebook
 ---
+to view http://htmlpreview.github.io
 
