1st almost done

--- a/coursera/statistics_with_r/intro_prob_data.Rmd
+++ b/coursera/statistics_with_r/intro_prob_data.Rmd
@@ -47,5 +47,12 @@ Principles of experimental design
 ![](jpeg/Annotation 2019-08-21 130716.jpg)
 ![](jpeg/Annotation 2019-08-21 130827.jpg)
 
+# Random Sample Assignment
+
+![](jpeg/Annotation 2019-08-21 131244.jpg)
+
+**quiz**
+
+![](jpeg/Annotation 2019-08-21 132351.jpg)
 
 
