--- a/coursera/statistics_with_r/intro_to_r_Coursera.Rmd
+++ b/coursera/statistics_with_r/intro_to_r_Coursera.Rmd
@@ -401,7 +401,7 @@ your workspace.
 
 ```{r variables-in-present}
 # type your code for Question 4 here, and Knit
-
+dim(present)
 ```
 
 <div id="exercise">
