assignment complete week 1 complete

--- a/coursera/statistics_with_r/intro_to_r_Coursera.Rmd
+++ b/coursera/statistics_with_r/intro_to_r_Coursera.Rmd
@@ -447,6 +447,10 @@ variable which of the following statements is true?
 
 ```{r more-boys-per-year}
 # type your code for Question 6 here, and Knit
+present <- present %>%
+mutate(more_boys = boys > girls)
+
+ggplot(data = present, aes(x = year, y = more_boys)) + geom_line()
 
 ```
 
@@ -462,6 +466,10 @@ variable which of the following statements is true?
 
 ```{r prop-boy-girl-over-time}
 # type your code for Question 7 here, and Knit
+present <- present %>%
+mutate(prop_boy_girl = boys/girls)
+
+ggplot(data = present, aes(x = year, y = prop_boy_girl)) + geom_line()
 
 ```
 
@@ -481,9 +489,9 @@ descending order).
 ```{r most-total-births}
 # type your code for Question 8 here
 # sample code is provided below, edit as necessary, uncomment, and then Knit
-#present %>%
-#  mutate(total = ?) %>%
-#  arrange(desc(total))
+present %>%
+arrange(desc(total))
+present
 ```
 
 ## Resources for learning R and working in RStudio
