--- a/coursera/statistics_with_r/intro_to_r_Coursera.Rmd
+++ b/coursera/statistics_with_r/intro_to_r_Coursera.Rmd
@@ -207,7 +207,7 @@ variable that comes after me".
 
 ```{r extract-counts-of-girls-born}
 # type your code for the Question 2 here, and Knit
-
+arbuthnot$girls
 ```
 
 Notice that the way R has printed these data is different. When we looked at the
