--- a/coursera/statistics_with_r/intro_prob_data.Rmd
+++ b/coursera/statistics_with_r/intro_prob_data.Rmd
@@ -171,7 +171,7 @@ shows marginal distribution(width of the bars)
 ![](jpeg/Annotation 2019-08-26 152306.jpg)
 ![](jpeg/Annotation 2019-08-26 173114.jpg)
 ![](jpeg/Annotation 2019-08-26 175627.jpg)
-
+![](jpeg/Annotation 2019-08-27 103958.jpg)
 
 
 
