--- a/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
+++ b/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
@@ -269,10 +269,16 @@ shrink:    If TRUE, will shrink scales to fit output of statistics, not raw data
 When putting the more levels on the row axis, then the y-axis would shrink so that it is harder to see which actual values are at the points as shown in the plot.
 
 ```{r}
-ggplot(data = mpg) + 
-  geom_point(mapping = aes(x = displ, y = hwy)) + 
-  facet_grid(class ~ drv)
+ggplot(data = mpg, aes(x = displ, y = hwy)) + geom_point() + facet_grid(class ~ drv)
 ```
+
+**3.6 Geometric objects**
+
+```{r}
+ggplot(data = mpg, aes(x = displ, y = hwy)) + geom_point() + geom_smooth()
+```
+
+
 
 
 
