--- a/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
+++ b/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
@@ -127,7 +127,21 @@ ggplot(data = mpg, aes(x = displ, y = hwy, linetype = drv)) + geom_smooth(show.l
 
 ```
 
+```{r}
+ggplot(data = mpg, aes(x = displ, y = hwy, linetype = drv)) + geom_point(aes(color = class)) + geom_smooth()
 
+```
+
+```{r}
+ggplot(data = mpg, aes(x = displ, y = hwy)) + geom_point(aes(color = class)) + geom_smooth()
+
+```
+
+
+```{r}
+ggplot(data = mpg, aes(x = cty, y = hwy)) + geom_point(data = filter(mpg, class == "subcompact" | class == "suv")) + geom_smooth(data = filter(mpg, class == "subcompact" | class == "suv"), se = FALSE)
+                                                                                                         
+```
 
 
 
