--- a/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
+++ b/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
@@ -143,6 +143,8 @@ ggplot(data = mpg, aes(x = cty, y = hwy)) + geom_point(data = filter(mpg, class 
                                                                                                          
 ```
 
+# 3.7 Statistical transformations
+
 
 
 
