--- a/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
+++ b/coursera/statistics_with_r/r_for_ds/part_1_explore.Rmd
@@ -145,16 +145,94 @@ ggplot(data = mpg, aes(x = cty, y = hwy)) + geom_point(data = filter(mpg, class 
 
 # 3.7 Statistical transformations
 
+```{r}
+ggplot(data = diamonds, aes(x = cut)) + geom_bar(aes(alpha = cut), fill = "blue") + theme_bw()
+```
+
+```{r}
+ggplot(data = diamonds, aes(x = cut)) + stat_count()
+
+```
+
+```{r}
+demo <- tribble(
+  ~cut,         ~freq,
+  "Fair",       1610,
+  "Good",       4906,
+  "Very Good",  12082,
+  "Premium",    13791,
+  "Ideal",      21551
+)
+ggplot(data = demo, aes(x = cut, y = freq)) + geom_bar(stat = "identity")
+```
+
+```{r}
+ggplot(data = diamonds, aes(x = cut, y = ..prop.., group = 1)) + geom_bar()
+```
+
+```{r}
+ggplot(data = diamonds) + 
+  stat_summary(
+    mapping = aes(x = cut, y = depth),
+    fun.ymin = min,
+    fun.ymax = max,
+    fun.y = median
+  )
+```
+
+
+# 3.8 Position adjustments
+
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, colour = cut))
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = cut))
+```
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity))
+```
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, colour = cut))
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = cut))
+```
+
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity))
+```
+
+
+```{r}
+ggplot(data = diamonds, mapping = aes(x = cut, fill = clarity)) + 
+  geom_bar(alpha = 1/5, position = "identity")
+ggplot(data = diamonds, mapping = aes(x = cut, colour = clarity)) + 
+  geom_bar(fill = NA, position = "identity")
+```
 
 
 
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity), position = "fill")
+```
 
 
+```{r}
+ggplot(data = diamonds) + 
+  geom_bar(mapping = aes(x = cut, fill = clarity), position = "dodge")
+```
 
-
-
-
-
+```{r}
+ggplot(data = mpg) + 
+  geom_point(mapping = aes(x = displ, y = hwy), position = "jitter")
+```
 
 
 
